[gd_scene load_steps=6 format=3 uid="uid://c3cl77r65dexu"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/menu/editor_toolbar.gd" id="1_o71fd"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/menu/action_popup_menu.gd" id="2_ni0c8"]
[ext_resource type="Texture2D" uid="uid://bs54uhn80ykrr" path="res://addons/cyclops_level_builder/art/icons/xray_normal.svg" id="3_ldp0l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7kxq"]

[sub_resource type="Theme" id="Theme_0hxey"]
PanelContainer/styles/panel = SubResource("StyleBoxEmpty_o7kxq")

[node name="PanelContainer" type="PanelContainer"]
offset_right = 739.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme = SubResource("Theme_0hxey")
script = ExtResource("1_o71fd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ToolButtonContainer" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="HBoxContainer"]
layout_mode = 2

[node name="Menu" type="PopupMenu" parent="HBoxContainer/MenuBar"]
item_count = 23
item_0/text = "Duplicate Selected Blocks"
item_0/id = 1000
item_1/text = "Merge Selected Blocks"
item_1/id = 1001
item_2/text = "Subtract Block"
item_2/id = 1002
item_3/text = "Intersect Blocks"
item_3/id = 1003
item_4/text = "Delete Selected Blocks"
item_4/id = 1004
item_5/text = "Snap to grid"
item_5/id = 1005
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Export As Gltf..."
item_7/id = 1006
item_8/text = ""
item_8/id = -1
item_8/separator = true
item_9/text = "Rotate 90 Ccw X"
item_9/id = 1007
item_10/text = "Rotate 90 Cw X"
item_10/id = 1008
item_11/text = "Rotate 180 X"
item_11/id = 1009
item_12/text = "Mirror Selection X"
item_12/id = 1010
item_13/text = ""
item_13/id = -1
item_13/separator = true
item_14/text = "Rotate 90 Ccw Y"
item_14/id = 1011
item_15/text = "Rotate 90 Cw Y"
item_15/id = 1012
item_16/text = "Rotate 180 Y"
item_16/id = 1013
item_17/text = "Mirror Selection Y"
item_17/id = 1014
item_18/text = ""
item_18/id = -1
item_18/separator = true
item_19/text = "Rotate 90 Ccw Z"
item_19/id = 1015
item_20/text = "Rotate 90 Cw Z"
item_20/id = 1016
item_21/text = "Rotate 180 Z"
item_21/id = 1017
item_22/text = "Mirror Selection Z"
item_22/id = 1018
script = ExtResource("2_ni0c8")

[node name="check_lock_uvs" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
text = "Lock UVs"

[node name="grid_size" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Grid snapping size"
item_count = 9
selected = 0
popup/item_0/text = "1/16"
popup/item_0/id = 0
popup/item_1/text = "1/8"
popup/item_1/id = 1
popup/item_2/text = "1/4"
popup/item_2/id = 2
popup/item_3/text = "1/2"
popup/item_3/id = 3
popup/item_4/text = "1"
popup/item_4/id = 4
popup/item_5/text = "2"
popup/item_5/id = 5
popup/item_6/text = "4"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "16"
popup/item_8/id = 8

[node name="display_mode" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "Wireframe"
popup/item_0/id = 0
popup/item_1/text = "Materials"
popup/item_1/id = 1

[node name="bn_xray" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Xray"
toggle_mode = true
icon = ExtResource("3_ldp0l")

[connection signal="toggled" from="HBoxContainer/check_lock_uvs" to="." method="_on_check_lock_uvs_toggled"]
[connection signal="item_selected" from="HBoxContainer/grid_size" to="." method="_on_grid_size_item_selected"]
[connection signal="item_selected" from="HBoxContainer/display_mode" to="." method="_on_display_mode_item_selected"]
[connection signal="toggled" from="HBoxContainer/bn_xray" to="." method="_on_bn_xray_toggled"]
